@@ -1,3 +1,6 @@
+2023-03-01
+    * Fixed default language setting
+
 2022-08-10
     * Release 1.3.1
 
